<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vishtech.todolist.mvvmtodo.ui.addedittask.AddEditTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/edit_text_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Task name"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/check_box_important"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Important task" />

        <TextView
            android:id="@+id/text_view_date_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Date created:" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_check_mark" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>